Missing name for preference "dvb-voltage"

See in vlcrc file:

# Polarization (Voltage) (string)
#dvb-polarization=

# ? (integer)
#dvb-voltage=13

# Local oscillator low frequency (kHz) (integer)
#dvb-lnb-low=0

There may be something to add in /modules/access/dtv/access.c file. But I guess this issue is pretty straightforward to fix for you guys.