dtv: remove deprecated --dvb-voltage

Fixes #17029.